# ESP32_embedded_system_programming

./: README.md  convert_sprites.py  generate_sprites.py  sprite_creation_script.py
components/joy/: joy.c
components/pin/: pin.c
components/tone/: tone.c
lab07/: notes.txt
lab07/main/: CMakeLists.txt  attack.c  attack.h  config.h  game.c  game.h  jump_physics.h  main.c  movement.c  movement.h  sprite_bad_duck.c  sprite_bad_duck.h  sprite_bad_hurt.c  sprite_bad_hurt.h  sprite_bad_idle.c  sprite_bad_idle.h  sprite_bad_jump.c  sprite_bad_jump.h  sprite_bad_kick.c  sprite_bad_kick.h  sprite_bad_punch.c  sprite_bad_punch.h  sprite_duck.c  sprite_duck.h  sprite_hurt.c  sprite_hurt.h  sprite_idle.c  sprite_idle.h  sprite_jump.c  sprite_jump.h  sprite_kick.c  sprite_kick.h  sprite_punch.c  sprite_punch.h  sprite_renderer.c  sprite_renderer.h  uart.c  uart.h
